# armi_backup

./: README.md
armi_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
armi_ws/install/armi_navigation/lib/armi_navigation/: camera_node  nav_to_pose_client  waypoint_follower
armi_ws/install/armi_navigation/share/armi_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
armi_ws/install/armi_navigation/share/armi_navigation/config/: waypoints.yaml
armi_ws/install/armi_navigation/share/armi_navigation/launch/: armi_navigation.launch.py
armi_ws/install/camera_module/lib/yolo_module/: camera_node
armi_ws/install/camera_module/share/camera_module/: package.sh  package.xml
armi_ws/src/armi_navigation/: package.xml  setup.cfg  setup.py
armi_ws/src/armi_navigation/armi_navigation/: camera_node.py  waypoint_follower.py
