<?xml version="1.0"?>
<package format="3">
  <name>camera_module</name>
  <version>0.0.1</version>
  <description>Camera node publishing webcam images and subscribing YOLO results</description>

  <maintainer email="hci@todo.todo">hci</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 런타임 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- 테스트 안 쓰면 삭제해도 됨 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>